Closed Bug 335879 Opened 19 years ago Closed 19 years ago

Corrupt database after import of event with non-mozilla timezone set

Categories

(Calendar :: Internal Components, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: ssitter, Unassigned)

References

Details

(Keywords: dataloss)

Attachments

(2 files)

Corrupt database after import of event with non-mozilla timezone set Steps to Reproduce: 1. Download attached testcase (ics file with one event) 2. Start Sunbird with new profile 3. Select File->Import and select the testcase, press OK 4. Restart Sunbird Actual Results: After importing the ics file errors are displayed in JavaScript console: Error: [Exception... "Component returned failure code: 0x804a0001 [calIDateTime.compare]" nsresult: "0x804a0001 (<unknown>)" location: "JS frame :: file:///D:/sunbird/components/calEvent.js :: anonymous :: line 245" data: no] Source File: file:///D:/sunbird/components/calEvent.js Line: 245 Error: [Exception... "Component returned failure code: 0x80070057 (NS_ERROR_ILLEGAL_VALUE) [calIDateTime.getInTimezone]" nsresult: "0x80070057 (NS_ERROR_ILLEGAL_VALUE)" location: "JS frame :: file:///D:/sunbird/components/calStorageCalendar.js :: newDateTime :: line 200" data: no] Source File: file:///D:/sunbird/components/calStorageCalendar.js Line: 200 The new event is not shown in unifinder or views. After restart of Sunbird the same error is displayed. In addition the calendar list is empty. --> It is not possible to remove the faulty event or calendar from database. This error has propably the same cause as the error in Bug 335876. Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060428 Mozilla Sunbird/0.3a2 (2006042814)
Attached file testcase
Even though we're not supporting non-Mozila ICS data for 0.3a2, database corruption is a really bad failure mode, so I think this should probably block.
Severity: normal → critical
Keywords: dataloss
Attached patch workaround patchSplinter Review
This patch makes it so that unknown timezones are ignored, and treated as floating. That means there is dataloss, but at least the app doesn't die. But 254893 will help in the real fix.
Attachment #220755 - Flags: first-review?(dmose)
Comment on attachment 220755 [details] [diff] [review] workaround patch r=dmose
Attachment #220755 - Flags: first-review?(dmose) → first-review+
Patch checked in. Filed bug 336640 on the issue of loosing the timezone info
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
The bugspam monkeys have struck again. They are currently chewing on default assignees for Calendar. Be afraid for your sanity!
Assignee: base → nobody
veerified with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060929 Sunbird/0.3
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: