bug 335879: treat unknown timezones as floating, to prevent the app from dying. r=dmose